--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,14 @@ html{
     color: #073e72;
 }
 
+.search-bar i{
+    position: absolute;
+    top:50%;
+    left:1.4rem;
+    transform:translateY(-50%);
+
+}
+
 
 /*end of navbar*/
 /*end of conatiners*/
