--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,41 @@ html{
     color: #073e72;
     letter-spacing: .1rem;
 }
+/*landing*/
+.landing{
+    width: 100%;
+    height: 90vh;
+    position: relative;
+}
+.landing-bg{
+    position: absolute;
+    top: 4rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
+    height: 65rem;
+    background-color: #0b3954;
+    border-radius: 3rem;
+}
+
+.banner{
+    width: 60%;
+    height: 65rem;
+    position: absolute;
+    top: 8rem;
+    left: 50%;
+    transform: translateX(-50%);
+    background-image: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5));
+    border-radius: 3rem;
+
+}
+.banner-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 3rem;
+    opacity: .8;
+}
 /*end of navbar*/
 /*end of conatiners*/
 
