added buttons added effects

--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,45 @@ html{
     border-radius: 3rem;
     opacity: .8;
 }
+
+.banner-heading{
+    position: absolute;
+    top: 10rem;
+    right: 5rem;
+    font-size: 8rem;
+    color: #fff;
+    width: 40%;
+    line-height: 1;
+    text-align: right;
+    text-shadow: 0.3rem 3rem rgba(0,0,0,.8);
+}
+
+.banner-btn{
+    position: absolute;
+    top: 28rem;
+    width: 18rem;
+    height: 4rem;
+    border: none;
+    border-radius: 3rem;
+    font-size: 1.6rem;
+    cursor: pointer;
+    transition: all.3s;
+}
+
+.banner-btn-1{
+    right: 25rem;
+    background-color: #f8872b;
+    color: #fff;
+}
+
+.banner-btn-1:hover
+
+.banner-btn-2{
+    right: 25rem;
+    background-color: #f8872b;
+    color: #fff;
+}
+
 /*end of navbar*/
 /*end of conatiners*/
 
