--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,69 @@ html{
     background-color: #f8872b;
     color: #fff;
 }
+/*products*/
+.prodcuts{
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.prodcuts-top{
+    width: 60%;
+    margin-bottom: 8rem;
+}
+
+.products h3{
+    font-size: 2rem;
+    color: #073e72;
+}
+.products h2{
+    font-size: 7rem;
+    color: #f8872b;
+}
+.products h1{
+    font-size: 9rem;
+    color: #073e72;
+    margin-top: -5rem;
+}
+
+.prodcuts-icons{
+    width: 60%;
+    display: flex;
+    justify-content: space-evenly;
+}
+.prodcuts-icons div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 18rem;
+    height: 20rem;
+    margin-right: 2rem;
+    background-color: #f7f7f7;
+    padding: 3rem 0;
+    border-radius: 2rem;
+    cursor: pointer;
+    transition: all;
+}
+.products-icons div:hover{
+    background-color: #fff;
+    box-shadow: 0 1rem 3rem rgba(0,0,0,.1);
+}
+.prodcuts-icons div:last-child{
+    margin-right: 0;
+}
+.prodcuts-icons div img{
+    margin-bottom: 3rem;
+}
+
+.prodcuts-icons div span{
+    font-size: 2.5rem;
+    color: #073e72;
+}
+/*end of products*/
+
 
 /*end of navbar*/
 /*end of conatiners*/
