--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,7 @@ html{
     color: #fff;
 }
 /*products*/
-.prodcuts{
+.products{
     width: 100%;
     height: 85vh;
     display: flex;
@@ -196,7 +196,7 @@ html{
     align-items: center;
 }
 
-.prodcuts-top{
+.products-top{
     width: 60%;
     margin-bottom: 8rem;
 }
@@ -215,12 +215,12 @@ html{
     margin-top: -5rem;
 }
 
-.prodcuts-icons{
+.products-icons{
     width: 60%;
     display: flex;
     justify-content: space-evenly;
 }
-.prodcuts-icons div{
+.products-icons div{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -237,14 +237,14 @@ html{
     background-color: #fff;
     box-shadow: 0 1rem 3rem rgba(0,0,0,.1);
 }
-.prodcuts-icons div:last-child{
+.products-icons div:last-child{
     margin-right: 0;
 }
-.prodcuts-icons div img{
+.products-icons div img{
     margin-bottom: 3rem;
 }
 
-.prodcuts-icons div span{
+.products-icons div span{
     font-size: 2.5rem;
     color: #073e72;
 }
