--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,8 @@ html{
     color: #073e72;
     letter-spacing: .1rem;
 }
+/*end of navbar*/
+
 /*landing*/
 .landing{
     width: 100%;
@@ -323,7 +325,86 @@ html{
     margin-right: 1rem;
 }
 /*end of blog*/
-/*end of navbar*/
+
+/*Contact*/
+.contact{
+    width:100%;
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-content{
+    width: 50%;
+    height: 15rem;
+    display: flex;
+}
+
+.content-left{
+    width: 40%;
+    height: 100%;
+    background-color: #ffb128;
+    border-radius: 2rem 0 0 2rem;
+    display: flex;
+    align-items: center;
+    padding-left: 4rem;
+}
+
+.content-left h2{
+    width: 80%;
+    font-size: 2.2rem;
+    color: #fff;
+    line-height: 1.4;
+}
+
+.content-left span{
+    font-size: 2.5rem;
+    color: #073e72;
+}
+
+.content-right{
+    width: 60%;
+    height: 100%;
+    background-color: #0b3954;
+    border-radius: 0 2rem 2rem 0;
+    display: block;
+    align-items: center;
+    justify-content: center;
+}
+
+.content-right input{
+    width: 35rem;
+    height: 4rem;
+    background-color: #174b69;
+    padding: 2rem;
+    border: none;
+    border-radius: .5rem;
+    color: #fff;
+    margin-right: 1rem;
+}
+
+.content-right input::placeholder{
+    color: #fff;
+    font-size: 1.4rem;
+}
+
+.content-right input:focus{
+    border: .1rem solid #f8872b
+}
+
+.content-right button{
+    width: 10rem;
+    height: 4rem;
+    background-color: #f8872b;
+    border: none;
+    border-radius: 3rem;
+    font-size: 1.6rem;
+    color: #fff;
+    cursor: pointer;
+}
+/*end of contact*/
+
 /*end of conatiners*/
 
 
